# techalyzer

./: .gitignore  .travis.yml  Cargo.toml  README.md
scripts/: README.txt  perftest.pl
scripts/plotting/: plot_backtest.py  plot_signals.py
src/: config.rs  date.rs  error.rs  indicators.rs  lib.rs  output.rs  secret.rs  source.rs  subcommands.rs  util.rs
src/analysis/: bollingerbandssignals.rs  macdsignals.rs  mod.rs  relativestrengthindexsignals.rs  signals.rs
src/backtester/: mod.rs  performance.rs
src/datasource/: alphavantage.rs  csv.rs  mod.rs  techalyzerjson.rs
src/datasources/: alphavantage.rs  datasource.rs  mod.rs  techalyzerjson.rs
src/marketdata/: mod.rs  prices.rs  stubmarketdata.rs
src/signals/: bollingerbandssignals.rs  macdsignals.rs  mod.rs  relativestrengthindexsignals.rs  signals.rs  smacrossovers.rs
src/trading/: buyandhold.rs  dtmodel.rs  manual.rs  mod.rs  position.rs  tradingmodel.rs
src/trading/ml/: decisiontree.rs  mlmodel.rs  mod.rs
src/util/: mod.rs  symbol.rs
test/csv/: tsla.csv
test/json/: apha_smacrossover.json  jpm_rsi.json
