[package]
name = "ta_experiments"
version = "0.1.0"
authors = ["Devin Gunay <devingunay@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ta = "0.1.5"
# TODO: if/when alphavantage merges my PR for full output, switch back to 
# alphavantage instead of my own fork.
# alphavantage = { version = "0.6.0", features = ["blocking"] }
alphavantage = { git = "https://github.com/dgunay/alphavantage", features = ["blocking"] }
chrono = "0.4"
chrono-tz = "0.4"
structopt = "0.3"
ndarray = "0.13"
ndarray-stats = "0.3"
derive_more = "0.99"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
strum = "0.18"
strum_macros = "0.18.0"