[package]
name = "techalyzer"
version = "0.1.0"
authors = ["Devin Gunay <devingunay@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# TODO: if/when my PR is merged, switch back to ta instead of my fork.
# ta = "0.1.5"
ta = { git = "https://github.com/dgunay/ta-rs", branch="macd-output" }
# TODO: use a stable release of alphavantage if they bother to tag one
# alphavantage = { git = "https://github.com/dgunay/alphavantage", features = ["blocking"] }
alphavantage = { git = "https://github.com/asmarques/alphavantage", features = ["blocking"], rev="57a5414" }
# alphavantage = { version = "0.6.0", features = ["blocking"] }
chrono = "0.4"
chrono-tz = "0.4"
structopt = "0.3"
ndarray = "0.13"
ndarray-stats = "0.3"
derive_more = "0.99"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
strum = "0.18"
strum_macros = "0.18.0"
bdays = "0.1.1"